# QuizArena

./: .env  .gitignore  README.md
QuizArena/: README.md  docker-compose.yml
QuizArena/backend/: main.py  pyproject.toml
QuizArena/backend/app/langchain_agent/: agent.py
QuizArena/backend/app/services/: chat_service.py  user_service.py
QuizArena/frontend/: next.config.js  tailwind.config.ts
QuizArena/frontend/app/: page.tsx
QuizArena/frontend/hooks/: useSocket.ts
backend/: Dockerfile
backend/app/api/: chat.py
backend/app/core/: config.py  security.py
backend/app/db/: prisma_client.py
backend/app/langchain_agent/: memory.py
backend/app/sockets/: chat_namespace.py  socket_manager.py
backend/prisma/: schema.prisma
frontend/: .gitignore  middleware.ts  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/callback/: route.ts
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/api/health/: route.ts
frontend/app/role/: page.tsx
frontend/app/student/: page.tsx
frontend/app/student/analytics/: page.tsx
frontend/app/student/lobby/: page.tsx
frontend/app/teacher/: page.tsx
frontend/app/teacher-dashboard/: layout.tsx  page.tsx
frontend/components/: AuthLayout.tsx
frontend/components/student/: footer.tsx  navbar.tsx
frontend/components/ui/: Button.tsx  Footer.tsx  Header.tsx
frontend/features/chat/: ChatWindow.tsx
frontend/lib/: socket.ts
frontend/lib/services/: authService.ts
frontend/lib/supabase/: server.ts
(+14 files in other folders)
