[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI + Prisma + LangChain + Socket.IO backend"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
python-socketio = "^5.11.3"
prisma = "^0.13.1"
langchain = "^0.2.6"
langchain-community = "^0.2.6"
langchain-openai = "^0.1.13"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
python-dotenv = "^1.0.1"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
httpx = "^0.27.0"
black = "^24.4.2"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
